# BookMinder

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_REVIEW.md  GEMINI.md  GITHUB_SETUP.md  LICENSE  ORIGINAL_VISION.md  README.md  TODO.md  codecov.yml  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_commit_permissions.txt  test_echo_pipe.txt  test_multiple_m.txt  test_simple_message.txt  vision.md  xs
.claude/: settings.json  validate_git_commands.py
.claude/commands/: expert-council.md  hi.md
.github/workflows/: archive-claude-logs.yml  claude-code-review.yml  claude.yml  main.yml
bookminder/: __init__.py  __main__.py  cli.py
bookminder/apple_books/: __init__.py  library.py
claude-dev-log-diary/: README.md  day-001.md  day-002.md  day-003.md  day-004.md  day-005.md  day-006.md  day-007.md  day-008.md  day-009.md  day-010.md  day-011.md  day-012.md  day-013.md  day-014.md  day-015.md  day-016.md  day-017.md  day-018.md  day-019.md  day-020.md  day-021.md  fetch_logs.py  gemini-summary-day-001-003.md  gemini-summary-day-004-005.md  gemini-summary-day-006-007.md  gemini-summary-day-008-009.md  gemini-summary-day-010-011.md  gemini-summary-day-012-013.md  gemini-summary-day-014-015.md  gemini-summary-day-016-017.md  gemini-summary-day-018-019.md  gemini-summary-day-020-021.md  moments_of_clarity.md  summary-final-day-004.md  summary-initial-day-004.md
claude-dev-log-diary/tools/: README.md  context_recovery_pattern.md  conversation_mode_notes.md  design_decisions.md  explore_session.py  explore_session_redesign.md  extract_commits.sh  extract_tool_calls.py  fetch_logs.py  fetch_logs.sh  parse_claude_jsonl.py  postcompact_hook.py  postcompact_hook_setup.md  reconstruct.jq  replay_claude_session.py  run_specs.py  task_visibility_findings.md  test_explore_session.py  testing_summary.md  xs_scout_v1.md  xs_scout_v2.md
claude-dev-log-diary/tools/specs/: broken_pipe_spec.py  context_options_spec.py  conversation_mode_bug_spec.py  display_modes_spec.py  edge_cases_spec.py  export_formats_spec.py  file_operations_spec.py  filter_patterns_spec.py  format_fidelity_spec.py  range_formats_spec.py  search_bugs_spec.py  shortcut_flags_spec.py  sidechain_visibility_spec.py  summary_and_defaults_spec.py  tool_formatting_spec.py  truncation_consistency_spec.py  unit_tests_spec.py
docs/: apple_books.md  claude4_collaboration_guide.md  collaboration_analysis.md  lessons_learned.md  modern_python_distribution.md  modern_python_practices.md  pre-commit-workflow.md  project_structure.md  python_best_practices.md  test_fixtures.md  uv_setup.md  yolo_mode_retrospective.md
docs/analysis/: behavioral_patterns.md  commit_patterns.md  constraint_implementation.md  cost_analysis.md  git_timeline.md  methodology_evolution.md  project_comparison.md  test_coverage_report.md  user_feedback_impact.md
specs/: cli_formatting_spec.py  cli_spec.py  cli_unit_spec.py
specs/acceptance/: __init__.py  cli_spec.py
specs/apple_books/: library_integration_spec.py  library_spec.py
specs/apple_books/fixtures/: Books.plist  copy_book_to_fixture.sh  create_fixture.sh
specs/e2e/: __init__.py  cli_wiring_spec.py
specs/integration/: __init__.py  library_containers_spec.py
specs/integration/apple_books/fixtures/: Books.swift  (+5 more)
specs/unit/: __init__.py  cli_formatting_spec.py  library_spec.py
stories/admin/: access-other-users-libraries.yaml
stories/discover/: filter-by-cloud-status.yaml  filter-by-multiple-criteria.yaml  filter-by-reading-status.yaml  filter-by-sample-flag.yaml  handle-user-environments.yaml  list-recent-books-enhanced.yaml  list-recent-books.yaml  pagination.yaml  validate-filter-values.yaml
stories/error_handling/: handle-missing-apple-books.yaml
stories/research/: zstate-cloud-mapping.yaml
(+12 files in other folders)
