[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# PEP 621 project metadata
[project]
name = "bookminder"
version = "0.1.0"
description = "Extract content and highlights from Apple Books for LLM analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Pavol Vaskovic", email = "pali@pali.sk"},
    {name = "Claude AI (claude-3-7-sonnet-20250219)"}
]
keywords = ["ebooks", "apple-books", "highlights", "llm"]

# Core dependencies
dependencies = [
    "ebooklib",
    "beautifulsoup4",
    "pyyaml",
    "click",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-describe",
    "pytest-spec",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

# Entry points
[project.scripts]
bookminder = "bookminder.cli:main"

# Explicitly specify packages
[tool.setuptools]
packages = ["bookminder", "bookminder.apple_books"]

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["specs"]
python_files = "*_spec.py"
python_functions = "it_*"
python_classes = "describe_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [".git", "__pycache__", "build", "dist", "claude-dev-log-diary"]
select = ["E", "F", "I", "B", "W", "UP", "N", "D"]
ignore = ["E203"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
