[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# PEP 621 project metadata
[project]
name = "bookminder"
version = "0.2.0"
description = "Extract content and highlights from Apple Books for LLM analysis"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
authors = [
    {name = "Pavol Vaskovic", email = "pali@pali.sk"},
    {name = "Claude AI (claude-3-7-sonnet-20250219)"},
    {name = "Claude AI (claude-sonnet-4-20250514)"},
    {name = "Claude AI (claude-opus-4-20250514)"},
    {name = "Gemini 2.5 Flash (gemini-2.5-flash)"},
    {name = "Gemini 2.5 Pro (gemini-2.5-pro)"}
]
keywords = ["ebooks", "apple-books", "highlights", "llm"]

# Core dependencies
dependencies = [
    "ebooklib",
    "beautifulsoup4",
    "pyyaml",
    "click",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-describe",
    "pytest-spec",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

# Entry points
[project.scripts]
bookminder = "bookminder.cli:main"

# Explicitly specify packages
[tool.setuptools]
packages = ["bookminder", "bookminder.apple_books"]

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["specs"]
python_files = "*_spec.py"
python_functions = "it_*"
python_classes = "describe_*"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = [
    "specs/",
    "claude-dev-log-diary/",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist", "claude-dev-log-diary"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "D"]
ignore = ["E203", "D203", "D213"]  # Ignore incompatible rules
extend-select = ["I"]

# Ignore missing docstrings in tests and __init__.py files
[tool.ruff.lint.per-file-ignores]
"specs/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "D205", "D400", "D415"]
"**/__init__.py" = ["D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
